RESOLVED FIXED305124
css/css-font-loading tests should not dump frame load callbacks
https://bugs.webkit.org/show_bug.cgi?id=305124
Summary css/css-font-loading tests should not dump frame load callbacks
Simon Fraser (smfr)
Reported 2026-01-08 09:34:42 PST
`TestInvocation::TestInvocation` matches on "loading/" but we don't want these CSS tests to dump frame load callbacks.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-08 09:34:50 PST
Simon Fraser (smfr)
Comment 2 2026-01-08 09:37:50 PST
EWS
Comment 3 2026-01-08 13:42:33 PST
Committed 305310@main (8f9bc068fbe3): <https://commits.webkit.org/305310@main> Reviewed commits have been landed. Closing PR #56264 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.