css/css-font-loading tests should not dump frame load callbacks https://bugs.webkit.org/show_bug.cgi?id=305124 rdar://167775069

Reviewed by Alan Baradlay.

Do a short-term fix to make `css/css-font-loading` tests not dump frame load callbacks, which is
just noise in the results, and adds flakiness.

webkit.org/b/304314 has a more comprehensive fix, but needs a bit more work to finish.

* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/empty-family-load-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontface-fonts-loading-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontface-load-in-modal-dialog-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontface-loadingevent-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontface-override-descriptor-getter-setter.sub-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-clear-css-connected-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-delete-css-connected-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-has-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-load-css-connected-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-load-css-wide-keywords-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-load-var-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-update-after-stylesheet-change-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfacesetloadevent-constructor-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/idlharness.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/nonexistent-file-url-expected.txt:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-font-loading/empty-family-load-expected.txt: Removed. These are text test results,
which don't need to be platform-specific.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-font-loading/font-face-reject-expected.txt: Removed.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-font-loading/fontface-load-in-modal-dialog-expected.txt: Removed.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-font-loading/fontface-override-descriptor-getter-setter.sub-expected.txt: Removed.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-add-css-connected-expected.txt: Removed.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-clear-css-connected-expected.txt: Removed.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-delete-css-connected-expected.txt: Removed.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-has-expected.txt: Removed.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-load-css-connected-expected.txt: Removed.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-load-css-wide-keywords-expected.txt: Removed.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-load-var-expected.txt: Removed.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-update-after-stylesheet-change-expected.txt: Removed.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-font-loading/fontfacesetloadevent-constructor-expected.txt: Removed.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-font-loading/idlharness.https-expected.txt: Removed.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/css/css-font-loading/nonexistent-file-url-expected.txt: Removed.
* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::TestInvocation):

Canonical link: https://commits.webkit.org/305310@main